trunk/Archive2/47/46dac457bde15e/output
main.cpp: In function 'int main()':
main.cpp:25:18: error: taking address of temporary [-fpermissive]
     auto q = &[]{};
                  ^
main.cpp:23:7: warning: unused variable 'k' [-Wunused-variable]
     s k;
       ^
main.cpp:25:10: warning: unused variable 'q' [-Wunused-variable]
     auto q = &[]{};
          ^
